fix layout issues on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,7 @@
 html {
   font-size: 62.5%; /* 62.5% of 16px is 10px */
+  overflow-x: clip;
+  max-width: 100%;
 }
 
 @media (max-width: 999px) {
@@ -20,6 +22,8 @@ body {
   background-color: #8cb8d7;
   margin: 0;
   padding: 0;
+  overflow-x: clip;
+  max-width: 100%;
 }
 
 a {
